--- a/lstm/lstm stuff.ipynb
+++ b/lstm/lstm stuff.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": false
+     "is_executing": true
     }
    },
    "outputs": [],
    "source": [
+    "# Dr. Bedricks original LSTM notebook\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn"
    ]
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +48,7 @@
        "torch.Size([1, 4, 2])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {
     "scrolled": true
    },
@@ -86,7 +88,7 @@
        "torch.Size([1, 4, 4])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,9 +174,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +188,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
