git sanity check.

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Homework 2: Text Classification\n",
     "\n",
+    "GIT SANITY CHECK\n",
+    "\n",
     "Text classification is a fundamental NLP task. In this assignment, you will build and evaluate a simple text classification pipeline, using both from-scratch as well as library implementations of standard classification algorithms.\n",
     "\n",
     "This problem set is adapted from the first problem set given in Jacob Eisentstein's Spring Term 2018 course in NLP, taught at Georgia Tech, and is modified from [the original](https://github.com/jacobeisenstein/gt-nlp-class/blob/master/psets/ps1/pset1.ipynb) with permission of the author."
